# test

./: 1.txt  CMakeLists.txt  README.md  aa.txt  bb..txt  dev.txt  log.txt  main.cpp  main.cpp.backup  test.txt
.github/workflows/: cmake.yml
gomain/: main.go
